docs: add building instructions for Windows in README.md and create build-dist.ps1 script